[tool.poetry]
name = "autopack-tools"
version = "0.1.2"
description = "Package Manager for AI Agent tools"
authors = ["Erik Peterson <e@eriklp.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "autopack" }]

[tool.poetry.scripts]
autopack = 'autopack.cli:main'

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
dataclasses-json = "^0.5.8"
urllib3 = "^1.26.16"
gitpython = "^3.1.31"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
isort = "^5.12.0"
pytest = "^7.3.2"
pytest-mock = "^3.11.1"
types-requests = "^2.31.0.1"
psycopg2 = "^2.9.6"
docopt = "^0.6.2"
autoflake = "^2.2.0"
types-psycopg2 = "^2.9.21.10"
types-docopt = "^0.6.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
